--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,12 +4,12 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <title>Node.js + MySQL + Sequelize</title>
-    <link rel='stylesheet' href='css/style.css' />
+    <link rel='stylesheet' href='/css/style.css' />
   </head>
   <body>
     <nav id='navbar'>
       <ul>
-        <li><a href='/'>Cadastrar</a></li>
+        <li><a href='/users/create'>Cadastrar</a></li>
       </ul>
     </nav>
     {{{body}}}
