--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,6 +28,14 @@ h1 {
   padding: 5px;
 }
 
+.form-checkbox {
+  flex-direction: row;
+}
+
+.form-checkbox input {
+  margin-right: 10px;
+}
+
 #navbar {
   border-bottom: 1px solid #ccc;
   padding: 0.5em;
