--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,7 @@
 
 h1 {
   text-align: center;
+  margin-bottom: 1em;
 }
 
 .form,
@@ -34,6 +35,23 @@ h1 {
 
 .form-checkbox input {
   margin-right: 10px;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 1200px;
+  margin: 0 auto;
+  gap: 10px;
+}
+
+.container .item {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 20px;
+  flex: 1 1 29%;
+  max-width: 29%;
+  height: 75px;
 }
 
 #navbar {
