--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,8 @@
-<h1>Hello world!</h1>
+<h1>Usuários cadastrados:</h1>
+<div class='container'>
+  {{#each users}}
+    <div class='item'>
+      <p>{{this.name}}</p>
+    </div>
+  {{/each}}
+</div>
