Atualização de dados

--- a/views/useredit.handlebars
+++ b/views/useredit.handlebars
@@ -1,5 +1,5 @@
 <h1>Editando: {{user.name}}</h1>
-<form action='/users/create' class='form' method='post'>
+<form action='/users/update' class='form' method='post'>
   <input type='hidden' name='id' value='{{user.id}}' />
   <div class='form-control'>
     <label for='name'>Nome:</label>
