--- a/public/css/style.css
+++ b/public/css/style.css
@@ -88,6 +88,21 @@ h1 {
   color: #721c24;
 }
 
+.address-container {
+  max-width: 1000px;
+  margin: 1em auto;
+  padding-top: 1em;
+  border-top: 1px solid #ccc;
+}
+
+.address-container h2 {
+  margin-bottom: 1em;
+}
+
+.address-container form {
+  width: 300px;
+}
+
 #navbar {
   border-bottom: 1px solid #ccc;
   padding: 0.5em;
