--- a/public/css/style.css
+++ b/public/css/style.css
@@ -92,6 +92,7 @@ h1 {
   max-width: 1000px;
   margin: 1em auto;
   padding-top: 1em;
+  padding-bottom: 200px;
   border-top: 1px solid #ccc;
 }
 
@@ -101,6 +102,12 @@ h1 {
 
 .address-container form {
   width: 300px;
+}
+
+.address-list {
+  margin-top: 1em;
+  padding-top: 1em;
+  border-top: 1px solid #ccc;
 }
 
 #navbar {
