--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,6 +110,17 @@ h1 {
   border-top: 1px solid #ccc;
 }
 
+.address-list div {
+  display: flex;
+  margin-bottom: 1em;
+  padding-bottom: 1em;
+  border-bottom: 1px solid #ddd;
+}
+
+.address-list form {
+  margin-left: 1em;
+}
+
 #navbar {
   border-bottom: 1px solid #ccc;
   padding: 0.5em;
