--- a/views/useredit.handlebars
+++ b/views/useredit.handlebars
@@ -50,7 +50,19 @@
   <div class='address-list'>
     <h2>Lista de endereços:</h2>
     {{#each user.Addresses}}
-      <p>#{{this.id}} - {{this.street}}, {{this.number}} - {{this.city}}</p>
+      <div>
+        #{{this.id}}
+        -
+        {{this.street}},
+        {{this.number}}
+        -
+        {{this.city}}
+        <form action='/address/delete' method='post'>
+          <input type='hidden' name='UserId' value='{{this.UserId}}' />
+          <input type='hidden' name='id' value='{{this.id}}' />
+          <input type='submit' value='Excluir' />
+        </form>
+      </div>
     {{/each}}
   </div>
 </div>
